tests/errors/sem9.kt
fun main() {
    val x: Int = 5;
    ++x; // immutable
}